[UPF] research plan submitted

--- a/doc/thesis/201605_ResearchPlan/main.tex
+++ b/doc/thesis/201605_ResearchPlan/main.tex
@@ -21,15 +21,15 @@
 \vspace{-1cm}
 \hspace{-1cm}
 \begin{minipage}{.5\textwidth}
-	\noindent \includegraphics[width=5cm]{images/upfLogo.jpeg} 
+    \noindent \includegraphics[width=5cm]{images/upfLogo.jpeg} 
 \end{minipage}
 \hfill
 \begin{minipage}{.5\textwidth}
     \flushright
-	\textbf{ \Large RESEARCH PLAN }
+    \textbf{ \Large RESEARCH PLAN }
 \end{minipage}
 
-	\vspace{3cm}
+\vspace{3cm}
 
 \hspace{-1cm}
 \fbox{
@@ -55,319 +55,63 @@
 \noindent\textbf{\LARGE Research Plan: }
 
 
-%\section{Introduction}
-%    \begin{description}
-%	\item[School:] UPF PhD Programme in Biomedicine 
-%	\item[Supervision:] Xavier Rubio (BSC) \\ Sergi Valverde (UPF-Complex System Lab)
-%	\item[Funding:] 4-years grant from EPNet project \\ (ERC advanced Grant 340828):
-%    \end{description}
-%
-%    \begin{quote}
-%	\small
-%	Production and Distribution of Food during the Roman Empire: Economic and Political Dynamics
-%    \end{quote}
-%    \vfill
 \section*{Introduction}
-\subsection*{Cultural Evolution}
-In this thesis we are interested to how social traits evolve. By social traits we mean every thing that have been culturally transmitted and or socially learnt. Thos traits often exhibits similar patterns of adoption and evolution and are widely studied by people that are studying Cultural Evolution. 
+%\subsection*{Cultural Evolution}
+In this thesis we are interested to study how social traits evolve. By social traits we mean every thing that are culturally transmitted (vs genetically) and/or can be socially learnt. Those traits often exhibits similar patterns of adoption and evolve given dynamics that are widely studied by people in what it is usually called: \emph{Cultural Evolution}.
 
-The aims of this fields of research is to understand:\\
+People in that field of research try to understand:\\
 
 \begin{minipage}{\textwidth}
-    $\rightarrow$ What mechanism drive the evolution of such traits?\\
-    $\rightarrow$ What mechanism generate such pattern?
+    $\rightarrow$ What mechanisms drive the evolution of such traits?\\
+    $\rightarrow$ What mechanisms generate such pattern?
 \end{minipage}
-\vspace{2cm}
+\vspace{.5cm}
 
-Research have shown that simple mechanisms (Bentley et al, 2004) can model such pattern such as Random Copy , Frequency biased (conformist/anti-conformist\dots) and other.
+A lot has been written on such mechanisms and like \cite{bentley2005specialisationandwealthinequalityinamodelofaclusteredeconomicnetwork} have shown than a mechanism as simple as a random copy of what already explain can mimic the pattern of adoption of various social traits such as the names of the people, the dog's breed preferences, etc\ldots  
 
-\begin{figure}
+%\begin{figure}
+%    \centering
+%    \includegraphics[width=10cm]{images/powerlawrepartition.jpg}
+%    \caption{Square: male names,Circle: female names, Dotted and plain lines: model result with different copy probabilities.From Bentley et al,~2004.}
+%
+%\end{figure}
+%\subsection*{Co-Evolution of Culture and Trade}
+In this thesis where are interested on what happen when those mechanism of adoption act upon social traits that are more or less indirectly linked to economical activities. If the social trait at sake is the taste of people for different kind of wine, the general cultural evolution of the most common taste of a population could have a deep impact at a production and trade level, as wine producer will have to follow the new habits of commotion of the people. But while adapting to new consumption's habit, the producers will change the market as some wine previously expensive will started to be less expensive and so one, leading to a tightly linked retroaction loop.
+
+We call those ``co-evolution of culture and economy''. We resume this as system with one cultural level where social interaction happen (social learning and cultural transmission through social networks) and an economic level, wher trade, production and consumption activities happen through economics and trade networks. In our particular case, the main idea is that the activity at one level impact the activity at the other level and vice versa (cf Fig.~\ref{fig:inter}). 
+
+\begin{figure}[ht]
     \centering
-    \includegraphics[width=10cm]{images/powerlawrepartition.jpg}
-    \caption{Square: male names,Circle: female names, Dotted and plain lines: model result with different copy probabilities.From Bentley et al,~2004.}
-
+    \includegraphics[width=8cm]{images/interaction}	
+    \caption{Co-evolution of culture and economy}
+    \label{fig:inter}
 \end{figure}
-\subsection*{Co-Evolution of Culture and Trade}
-More precisly, what happen when those social traits are linked to economical activities
 
-%	    \only<2>{\vspace{1cm}\includegraphics[height=3cm]{images/bordeaux.jpg}\hspace{2cm}
-%	    \includegraphics[height=3cm]{images/napa}}
-%	    \only<3>{\includegraphics[height=4cm]{images/tools}}
-%	    \only<4>{\includegraphics[height=4cm]{images/stockoption}}
-\begin{figure}
-    \centering
-    \includegraphics[width=10cm]{images/interaction}	
-\end{figure}
-%
-%\end{frame}
-%
-%
-%
-\subsection*{Approach}
+%\subsection*{Approach}
+
+To study this mechanisms this PhD thesis we focus on on particular case study: the economy of the Roman Empire. We think that to often study of cultural dynamics focus on materials coming from internet social network that are not representative of general cultural dynamics. For that reason we want to explore a case study that relying not only on a technology used by a subset of a subset of the actual population but that can be compared throughout time and space: between different cultures and at different historical time.
+
+We think that archaeological record and historical studies are the best suited approach in this regard. Moreover, as the PhD thesis is fully part of the EPNet Project \cite{remesal2014epnet}, that aims to ``[\ldots]to investigate the political and economical mechanisms that characterised the dynamics of the commercial trade system during the Roman Empire'',we have access to huge amount and eminent specialists about the Roman Economy, which make the Roman Empire as the perfect case study. 
+
+To complement this historical and archaeological approach, this PhD thesis largely rely on computer model and simulation. They offer the perfect tool to gather knowledge coming from widely spread field of research and is the perfect way to encompass a lot of problems raised by archaeology (cf \cite{wurzer2015agentbasedmodelingandsimulationinarchaeology}) and make the kind of cross-cultural and cross-temporal comparison that we want to do. Moreover, they allow us to easily make a back and forth between a purely theoretical study of the system we described before and empirical and data-driven study of the Roman Empire.
 
 
-\begin{itemize}
-    \item Archaeology
-	\begin{itemize}
-	    \item Compare culture across time (vs ``twitter studies'')
-	\end{itemize}
-	\vfill
-    \item Computer Simulation
-	\begin{itemize}
-	    \item Compare \& Select models
-	    \item Explore \& Generate hypothesis
-	\end{itemize}
-\end{itemize}
-%
-\begin{figure}
-    \includegraphics[width=2cm]{images/approach.pdf}		
-\end{figure}
-%    
-%\end{frame}
-%
-%\begin{frame}
-%    \begin{center}
-%	\includegraphics[width=\textwidth]{images/approach2.pdf}		
-%    \end{center}
-%    
-%\end{frame}
-%
-%\begin{frame}
-%    \centering
-%    \Large
-%   Plan 
-%\end{frame}
-%\begin{frame}{Plan}
+To achieve that we divide this PhD in 3 part. The first one aims to develop a theoretical framework based on computer model to study the dynamics of co-evolution of economy and culture and how the introduction of social traits that bear economics value can transform the dynamics of cultural evolution and how the cultural dynamics can impact economy. The second part is twofold: we want to find the appropriate proxy in the archaeological record that could help us to characterize economical dynamics acting during the Roman Empire and once find the good proxy, to measure it throughout the cities of the empire. The last part heavily depend on the two first part and remains yet speculative but that main idea would be to try to articulate the dynamics empirically measured with the model developed in the first part in order to see if the dynamics implemented in our model can explain the empirical patterns observed.
 
-\section{Theoretical Exploration: How economics value change the dynamics of Cultural Evolution (Computer Model vs Neutral Model) }
-\section{ Empirical Study:  Characterize an economy through socio-economic artefacts distribution, a case study the Roman Empire (Scaling Properties)}
-\section{ Articulate the Theoretical Exploration \& the Empirical Observations}
-%
-%\end{frame}
-%
-%\begin{frame}
-%    \centering
-%    \Large
-%    Theoretical Exploration
-%\end{frame}
-%
-%\begin{frame}{A General Agent Based Framework }
-%
-%     Two main components:
-%     \vfill
-%    \begin{enumerate}
-%	\item Trade side: Bartering Economy (Gintis 2009),
-%	\item Cultural side: ``copy the most successful'' (Bentley 2006).
-%    \end{enumerate}
-%    \begin{center}
-%	\includegraphics[width=.8\textwidth]{images/interaction}	
-%    \end{center}
-%\end{frame}
-%	
-%
-%\begin{frame}{The Model}
-%	\begin{block}{1. The Economy \& the Barter Mechanism}
-%		\begin{itemize}
-%			\item $N$ goods
-%			\item $M$ Agent 
-%				$\left\{
-%					\begin{tabular}{@{}l@{}}
-%						a quantity of each Goods \\
-%						$N$ values attributed to each goods\\
-%					\end{tabular}
-%					\right.$
-%				\item Agents \emph{produce} one good and \emph{exchange} it to obtain the other goods.
-%				\item After the exchange, the agents \emph{consume} all goods 
-%			\end{itemize}
-%			Agent perform this 10 times and a scores is given to each of them.
-%		\end{block}
-%	\end{frame}
-%
-%	\begin{frame}{The Model}
-%		\begin{block}{2. Cultural Mechanisms}
-%			\begin{itemize}
-%					\vfill
-%				\item Less successful agents \emph{copy} the most successful (Biased-Copy).
-%					\vfill
-%				\item Given a probability $\mu$ the value attributed to some goods is modified (Innovation/Mutation)
-%			\end{itemize}
-%		\end{block}
-%	\end{frame}
-%\begin{frame}{Experiments}
-%	\centering
-%	\textbf{Trade Model} \\Trade Mechanism + Success Biased Copy\\
-%	\vfill
-%	vs\\
-%	\vfill
-%	\textbf{Neutral Model}\\ Trade Mechanism + Random Copy\\
-%	 
-%
-%\end{frame}
-%
-%
-%\section{Results}
-%
-%
-%
-%\begin{frame}{Results: Economic Dynamic}
-%    \begin{figure}[!h]
-%	\centering
-%	\begin{tabular}{ c c}
-%	    Neutral Model & Trading Model \\
-%	    \includegraphics[width=5cm]{images/ScoreEvolutionForRandom-G3N500.pdf}
-%	    & \includegraphics[width=5cm]{images/ScoreEvolutionForTrade-G3N500.pdf}
-%
-%	\end{tabular}
-%	\caption{Evolution of the score within the two different models for two typical run with 500 agents and 3 goods evolving during 10000 timestep.}%%
-%	\label{fig:scoreEvol}
-%    \end{figure}
-%\end{frame}
-%    
-%
-%
-%\begin{frame}{Results: Economic Dynamics}
-%	\begin{figure}
-%	    \caption{Example for 3 goods and 500 agents}
-%	    \begin{columns}
-%		\column{.5\textwidth}
-%		\includegraphics[height=\textwidth]{images/ClearingPriceDistanceEvolutionForTrade-G3N500.pdf}\\
-%	    \end{columns}
-%		@~Equilibrium: personal values  $\rightarrow$ optimal (shared) values.
-%	\end{figure}
-%	
-%\end{frame}
-%
-%\begin{frame}{Results: Frequency Distribution}
-%    \subsection*{Distribution of variant:}
-%    \begin{figure}[!h]
-%	\begin{center}
-%	    \begin{tabular}{ccc}
-%		\includegraphics[width=5cm]{images/2SetupDistribA.pdf}\\
-%	    \end{tabular}
-%
-%	\end{center}
-%	%\caption{Frequencies distribution, where each points represent the mean for 100 runs, for: a) the neutral and the trading models.  b) the neutral model and the trading model without the trading innovation process. c) the trade model and the trade model without the trading innovation process.}
-%    \end{figure}
-%\end{frame}
-%
-%\begin{frame}{Next Objectives}
-%    \vfill
-%    Understand general dynamics and properties of such systems:
-%    \vfill
-%	\begin{itemize}
-%	\item Parameters fitting
-%    \vfill
-%	\item Different Cultural Mechanisms
-%    \vfill
-%	\item Different Trade Assumption
-%    \vfill
-%	\item Network Constraints
-%    \vfill
-%	\item \dots
-%    \vfill
-%	\end{itemize}
-%\end{frame}
-%
-%\begin{frame}
-%    \centering
-%    \Large
-%   Empirical Studies 
-%\end{frame}
-%\begin{frame}{Empirical Studies}
-%	Characterize an economy through socio-economic artefacts distribution:\\
-%	\hspace{1cm} The need of strong proxy\\
-%
-%	\vspace{.5cm}
-%    \uncover<2->{
-%	    Within EPNet:
-%	    
-%    \begin{itemize}
-%	\item Olive Oil production
-%	\item Wine production
-%	\item \ldots
-%    \end{itemize}}
-%    \uncover<3->{
-%	    \begin{alertblock}{Intuition}
-%		    Scaling properties of those indicators across cities to infer economic properties
-%	    \end{alertblock}
-%    }
-%\end{frame}
-%
-%\begin{frame}{Scaling properties}
-%    \begin{figure}
-%	\includegraphics[width=.8\textwidth]{images/wageVsSize.jpg}
-%	\caption{ Bettencourt 2007}
-%    \end{figure}
-%\end{frame}
-%
-%
-%
-%\begin{frame}
-%    \centering
-%    \Large
-%    \section{  Last Part}
-%\end{frame}
-%
-%\begin{frame}
-% To what extent the theoretical model can explain the observed patterns?
-%    
-%
-%\end{frame}
-%
-%\begin{frame}{So far}
-%    \small
-%    \begin{itemize}
-%	\item Random Copy vs Economy-Biased Copy : WSC 15
-%	\item Social Network Impact on Economic dynamics: Complenet \& CAA 16
-%	\item  Scaling Law and Cities: DACAS1 16
-%	\item  Model and Computer Sim in History \&  Archaeology: MS7 16
-%    \end{itemize}
-%    
-%\end{frame}
-%
-%    \section{Context}
-%As part of the Economy and Political Network project (EPNet - ERC 340828 ), the PhD will try, as a general objective :
-%\begin{quote}
-%	``[\ldots]to investigate the political and economical mechanisms that characterised the dynamics of the commercial trade system during the Roman Empire.''
-%\end{quote}
-%
-%Within this framework, the thesis will study the conditions of the emergence of a free market in a pre-industrial context, with the underlying aim to shed new light on the old debate in history and archaeology about the nature of the roman economy. Was it a fully integrated free market economy or a heterogeneous network of small independent economics loosely connected? In which extend the control of the Roman Empire facilitate or avoid the emergence of a free market?
-%
-%To do so we will study the interaction between trade mechanism and the evolution of cultural artifact (ie. co-evolution of trade and culture). The study of cultural artifact seems to us the most promising approach as other economical records has been lost.
-%
-%
-%The first step of the PhD will consist on exploring the interaction between trade and culture in a theoretical way using a computer simulation. In a second time, we will confront the theoretical finding to archaeological and historical evidences from the Roman Empire. In a third part, we want to explore further  the mechanisms that drive cultural evolution using more complete and precise set of data to precise the previous theoretical studies.
-%
-%
-%\section{Theoretical model of co-evolution trade \& culture}
-%The first part of the PhD will be dedicated to develop a theoretical model to analyse under which cultural and economical mechanisms a free market could evolve and stay stable:. 
-%
-%More precisely, we want to study the impact of the trade mechanism on the distribution of the cultural artifact, and in the way other, what is the impact of the cultural behavior of the population on the economical system.
-%
-%For that we want to explore different paths:
 
-%\subsection{Trade mechanism}
-%Different economical model, different utility function (rational assumption, behavioral economics, new institutional economics, research equilibrium, oligopoly,\ldots)
-%
-%\subsection{Cultural mechanism}
-%Different imitation and innovation processes (random copy, frequency dependant\ldots)
-%
-%\subsection{Structure of the trade network}
-%What properties (density/sparsity,\ldots) of the network (cultural and/or economical network) allow a free market to evolve and to stay stable? What happen in heterogeneous network where the speed of the transmission of the information is not the same on every edge?
-%
-%
-%\section{Roman case study}
-%In a second part the thesis will focus on some aspects of the Roman Empire, and using archaeological and historical evidence, try to articulate those aspect to the theoretical study made before.
-%
-%
-%Could we study roman empire as an ecological system where specialisation evolve (specialised production sites, precise consumptions sites) allowing the installation free market? Could Niche Construction Theory be a good framework to study that?
-%
-%\section{Study of innovation process using a case study}
-%In a last experiment we want to explore more in detail the impact of the innovation process on the evolution of the trade mechanism using a case study with more abundant and precise data.
-%
-%The need of this study come from the fact that in cultural evolution innovation is often taken as random, as is mutation in biology. But it seems obvious that in many case, and moreover in cases involving economical trade, that the innovation process could not be only random. 
-%
-%We want here to study, using actual corpus, how the innovation behaviour could impact the evolution of a market system and vice versa, how a trade system could transform innovation behaviors.
-%
+\section{Theoretical Exploration: How economics value change the dynamics of Cultural Evolution}
+A first version of this model has been already presented and published in the proceedings of the Winter Simulation Conference \cite{carrignon2015modellingthecoevolutionoftradeandcultureinpastsocieties}. The main idea behind our model is to use a simple Agent-Based Model that allow use to easily bring together knowledge from history and archaeology with knowledge build in other fields (economy, cognitive sciences, biology\ldots). 
+
+This will allow us to (1) explore and measure how the linkage of a social traits with an economic and trade can transform the dynamics of cultural evolution with regard to traditional model of cultural evolution (random copy, frequency biased copy\ldots) and (2) explore and compare hypothesis made by historians on the nature of the economy during the Roman Empire. 
+
+\section{Empirical Study: Characterize an economy through socio-economic artefacts distribution, a case study the Roman Empire}
+In that section our intuition is that following \cite{ortman2014theprehistoryofurbanscaling}, the way the distribution of some particular socio-economic artefacts (such as the diversity of producers of a given good, the complexity of the infrastructure\ldots) change between cities of different size could help us to characterize the economy that generate the pattern we observe. This approach, comming from studies in biology (cf \cite{schmidtnielsen1984scalingwhyisanimalsizesoimportant}) has already been successfully used to characterize nowadays cities \cite{bettencourt2010aunifiedtheoryofurbanliving,batty2013theory}. 
+
+This could be the perfect proxy to (1) qualify in a measurable way some economics properties of the Roman Empire and (2) compare those properties with nowadays society and between different cultures and historical periods. Nonetheless, this approach will mostly depend on the data available and we hope to be able rely on the huge amount of data made available within the EPNet project and by comparing it to other available database. Anyway any other source of information will be used and any other case study could be envisaged. 
+
+\section{Articulate the Theoretical Exploration \& the Empirical Observations}
+In this section we aim to see in what extend the dynamics implemented in the model developed in the first pattern can explain the properties observer during the empirical exploration of the second part. As this part mainly rely on the result of the two first part it remains highly speculative. 
+\bibliographystyle{unsrt}
+\bibliography{../../biblio/bib/phd.bib}
 \end{document}
 
