small bib update

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -1,5 +1,20 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+@article{foote2016genomeculturecoevolutionpromotesrapiddivergenceofkillerwhaleecotype,
+	abstract = "Analysing population genomic data from killer whale ecotypes, which we estimate have globally radiated within less than 250,000 years, we show that genetic structuring including the segregation of potentially functional alleles is associated with socially inherited ecological niche. Reconstruction of ancestral demographic history revealed bottlenecks during founder events, likely promoting ecological divergence and genetic drift resulting in a wide range of genome-wide differentiation between pairs of allopatric and sympatric ecotypes. Functional enrichment analyses provided evidence for regional genomic divergence associated with habitat, dietary preferences and post-zygotic reproductive isolation. Our findings are consistent with expansion of small founder groups into novel niches by an initial plastic behavioural response, perpetuated by social learning imposing an altered natural selection regime. The study constitutes an important step towards an understanding of the complex interaction between demographic history, culture, ecological adaptation and evolution at the genomic level.",
+	author = "{Foote, Andrew D.} and {Vijay, Nagarjun} and {Avila-Arcos, Maria C.} and {Baird, Robin W.} and {Durban, John W.} and {Fumagalli, Matteo} and {Gibbs, Richard A.} and {Hanson, M. Bradley} and {Korneliussen, Thorfinn S.} and {Martin, Michael D.} and {Robertson, Kelly M.} and {Sousa, Vitor C.} and {Vieira, Filipe G.} and {Vinar, Tomas} and {Wade, Paul} and {Worley, Kim C.} and {Excoffier, Laurent} and {Morin, Phillip A.} and {Gilbert, M. Thomas P.} and {Wolf, Jochen B.W.}",
+	doi = "10.1038/ncomms11693",
+	journal = "Nat Commun",
+	localfile = "../pdfs/foote2016genomeculturecoevolutionpromotesrapiddivergenceofkillerwhaleecotype.pdf",
+	month = "may",
+	note = "Supplementary information available for this article at http://www.nature.com/ncomms/2016/160531/ncomms11693/suppinfo/ncomms11693\_S1.html",
+	publisher = "Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.",
+	risfield_0_m3 = "Article",
+	title = "{Genome-culture coevolution promotes rapid divergence of killer whale ecotypes}",
+	volume = "7",
+	year = "2016"
+}
+
 @book{frazer1995anevolutionaryarchitecture,
 	author = "Frazer, John",
 	isbn = "1870890477,9781870890472",
@@ -1099,14 +1114,15 @@
 	year = "2009"
 }
 
-@article{lycett2015,
+@article{lycett2015CulturalevolutionaryapproachestoartifactvariationovertimeandspaceBasisprogressandprospects
+,
 	author = "Lycett, Stephen J.",
 	doi = "10.1016/j.jas.2015.01.004",
 	file = "1-s2.0-S0305440315000072-main.pdf:/home/simon/.mozilla/firefox/hbd7she8.default-1398248423370/zotero/storage/Q3C756ED/1-s2.0-S0305440315000072-main.pdf:application/pdf",
 	issn = "03054403",
 	journal = "Journal of Archaeological Science",
 	language = "en",
-	localfile = "../pdfs/culturalevolutionaryapproachestoartifactvariationovertimeandspacebasisprogressandprospects.pdf",
+	localfile = "../pdfs/lycett2015culturalevolutionaryapproachestoartifactvariationovertimeandspacebasisprogressandprospects.pdf",
 	month = jan,
 	shorttitle = "Cultural evolutionary approaches to artifact variation over time and space",
 	title = "{Cultural evolutionary approaches to artifact variation over time and space: {Basis}, progress, and prospects}",
