few change in list of abstract for PRBB

--- a/doc/cours/PRBBSeminar/abstracs.tex
+++ b/doc/cours/PRBBSeminar/abstracs.tex
@@ -1,10 +1,43 @@
-
-
 \documentclass[10pt,letterpaper]{article}
 
+\usepackage[margin=1in]{geometry}
+\usepackage{graphicx}
 
 
 \begin{document}
+\vspace{-1cm}
+\hspace{-1cm}
+\begin{minipage}{.5\textwidth}
+    \noindent \includegraphics[width=5cm]{upfLogo.jpeg} 
+\end{minipage}
+\hfill
+\begin{minipage}{.5\textwidth}
+    \flushright
+    \textbf{ \Large PRBB Seminar}
+\end{minipage}
+
+\vspace{3cm}
+
+\hspace{-1cm}
+\fbox{
+
+    \begin{minipage}{\textwidth}
+	\vspace{.2cm}
+	\noindent\textbf{Student:} Simon Carrignon
+	\vspace{.5cm}
+
+	\noindent\textbf{Project Title:} ``Cultural evolution and long term economic dynamics: The case study of Rome.''
+	\vspace{.5cm}
+
+	\noindent\textbf{PhD thesis supervisors:} Xavier Rubio-Campillo \& Sergi Vavlerde
+	\vspace{.5cm}
+
+	\noindent\textbf{Research Group:} Barcelona Supercomputing \& Center Complex System Lab (UPF)  
+	\vspace{.2cm}
+    \end{minipage}
+
+}
+\vspace{2cm}
 
 \section{ABSTRACT: Cell Communication}
 http://www.prbb.org/arxiu/event/1622
@@ -211,16 +244,43 @@ No targetic specific molecule but global change cbinaong different approay pharm
 Session of the 20st of April :
 
 \begin{itemize}
-    \item Le con et les genes
-    \item l'epigeneticienne
-    \item le pysoclogue et ses souris qui ont peur avant de savoir
-    \item la traductrice en talon haut
-    \item la meuf et les velo dans barcelone
-    \item l'anthorpologue hipster bogoss qui bosse sur l'art
-    \item le paki et la 4G
-    \item la blonde et les planete
+    \item Lego \& gene
+    \item All is not genetic
+    \item Psycology animals cognition
+    \item Colombian slang Spanish traduction in different langiuage
+    \item Bike in barcelone
+    \item l'anthorpologue art and internet
+    \item Technical implementation of 4G
+    \item Map representation and Psycology
     \item Simon Carrignon
 \end{itemize}
+
+\section{ABSTRACT: Prosody and Learning}
+
+\section{ABSTRACT: Detect selection}
+Fct
+Selection in rare positive mutation
+IHS and nSL detect polygenic haplotype and. Homozygosity.
+H12
+Artificial selection.
+10 chromosomes of 1M bases
+
+
+Determine if detection method are good
+Power and false positive pas competition
+Using Windows of 200position.
+Fixe the windows and make test.
+Elle me me convint pas du tout du tout.
+
+
+Benchmark with data from heliconius which mimic other species.
+Numata vs Melpomene
+Balanced selection associative mating
+IHS nSL work with Windows
+H12 also but too costly.
+
+
+
 
 \end{document}
 
