le abstracts de merde

--- a/doc/cours/PRBBSeminar/abstracs.tex
+++ b/doc/cours/PRBBSeminar/abstracs.tex
@@ -58,9 +58,9 @@ Autocrine cells (cell communication)
 Secret and send circuit : a similar circuit
 Synthetic approach from bottom up
 
-Expe pour montrer quelle se patlent a Elle meme
+Experiments mixing models and synthetics boilogy to show how ccell create their onw auto-regulator network.
 
-Celle qui se murmureny a leur propre oreils
+Celles qui murmuraient à leur propre oreils
 
 From indivual to many. Cell
 
